--- a/frontend/web/.webpackrc
+++ b/frontend/web/.webpackrc
@@ -1,3 +1,6 @@
 {
-    "theme":"src/theme.js"
+    "theme":"./src/theme.js",
+    "extraBabelPlugins": [
+       ["import", { "libraryName": "antd", "libraryDirectory": "es", "style": true }]
+     ]
 }
