--- a/frontend/web/package.json
+++ b/frontend/web/package.json
@@ -10,6 +10,7 @@
     "antd": "^3.4.4",
     "babel-plugin-import": "^1.7.0",
     "dva": "^2.2.3",
+    "immutable": "^3.8.2",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
