--- a/frontend/web/package.json
+++ b/frontend/web/package.json
@@ -11,6 +11,7 @@
     "babel-plugin-import": "^1.7.0",
     "dva": "^2.2.3",
     "immutable": "^3.8.2",
+    "mockjs": "^1.0.1-beta3",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
