--- a/frontend/web/.webpackrc
+++ b/frontend/web/.webpackrc
@@ -1,6 +1,7 @@
 {
     "theme":"./src/theme.js",
     "extraBabelPlugins": [
+      "babel-plugin-transform-decorators-legacy",
        ["import", { "libraryName": "antd", "libraryDirectory": "es", "style": true }]
      ]
 }
