--- a/frontend/web/package.json
+++ b/frontend/web/package.json
@@ -15,7 +15,8 @@
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-draggable": "^3.0.5"
+    "react-draggable": "^3.0.5",
+    "react-immutable-proptypes": "^2.1.0"
   },
   "devDependencies": {
     "babel-plugin-dva-hmr": "^0.3.2",
