--- a/frontend/web/package.json
+++ b/frontend/web/package.json
@@ -11,12 +11,14 @@
     "babel-plugin-import": "^1.7.0",
     "dva": "^2.2.3",
     "immutable": "^3.8.2",
+    "konva": "^2.1.3",
     "mockjs": "^1.0.1-beta3",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-draggable": "^3.0.5",
-    "react-immutable-proptypes": "^2.1.0"
+    "react-immutable-proptypes": "^2.1.0",
+    "react-konva": "^1.7.3"
   },
   "devDependencies": {
     "babel-plugin-dva-hmr": "^0.3.2",
